release: ZentrixAPI 1.5.0